Testing backebd for deployment